<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_example" translatable="false">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill" translatable="false"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>


    <string name="set_start_time">Set start time</string>
    <string name="set_end_time">Set end time</string>
    <string name="start">Start time:</string>
    <string name="end">End time:</string>
    <string name="go">GO</string>
    <string name="open">Open:</string>
    <string name="close">Close:</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="add_new_quote">Add new quote</string>
    <string name="search">search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_error">Error! No such bid in DATABASE</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_string"/>
    <string name="stock_exists">This stock is already saved!</string>
</resources>
