<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.sam_chordas.android.stockhawk.ui.StockHistoryActivity">

        <LinearLayout
            android:id="@+id/search_bar"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/start"
                    android:id="@+id/textView"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/start"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/set_start_time"
                    android:layout_gravity="center"
                    android:id="@+id/buttonStart"
                    android:onClick="onButtonClicked"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/end"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/end"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/set_end_time"
                    android:layout_gravity="center"
                    android:id="@+id/buttonEnd"
                    android:onClick="onButtonClicked"/>
            </LinearLayout>
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:text="@string/go"
                android:id="@+id/buttonSearch"
                android:src="@mipmap/ic_search"
                android:scaleType="fitCenter"
                android:layout_gravity="bottom"
                android:contentDescription="@string/go"
                android:onClick="onButtonClicked"/>
        </LinearLayout>

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--<android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerHistory" />-->
    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_gravity="center" />


</FrameLayout>